--- a/Packages/net.koyashiro.udonjwt/package.json
+++ b/Packages/net.koyashiro.udonjwt/package.json
@@ -20,6 +20,9 @@
   "samples": [],
   "url": "https://github.com/koyashiro/udon-jwt/releases/download/v0.8.1/net.koyashiro.udonjwt-0.1.0.zip",
   "vpmDependencies": {
-    "com.vrchat.udonsharp": "1.1.5"
+    "com.vrchat.udonsharp": "1.1.5",
+    "net.koyashiro.udonencoding": "0.2.0",
+    "net.koyashiro.udonjson": "0.7.0",
+    "net.koyashiro.udontest": "0.1.1"
   }
 }
