chore(deps): update dependencies

--- a/Packages/net.koyashiro.udonjwt/Editor/Koyashiro.UdonJwt.Editor.asmdef
+++ b/Packages/net.koyashiro.udonjwt/Editor/Koyashiro.UdonJwt.Editor.asmdef
@@ -2,7 +2,7 @@
     "name": "Koyashiro.UdonJwt.Editor",
     "references": [
         "UdonSharp.Runtime",
-        "Koyashiro.UdonJwt.Runtime"
+        "Koyashiro.UdonJwt"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
