--- a/Packages/net.koyashiro.udonjwt/Runtime/Koyashiro.UdonJwt.asmdef
+++ b/Packages/net.koyashiro.udonjwt/Runtime/Koyashiro.UdonJwt.asmdef
@@ -1,10 +1,9 @@
 {
-    "name": "Koyashiro.UdonJwt.Tests",
+    "name": "Koyashiro.UdonJwt",
     "references": [
         "UdonSharp.Runtime",
-        "Koyashiro.UdonJson.Runtime",
-        "Koyashiro.UdonJwt.Runtime",
-        "Koyashiro.UdonTest.Runtime"
+        "Koyashiro.UdonEncoding",
+        "Koyashiro.UdonJson"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
