--- a/Packages/net.koyashiro.udonjwt/Tests/Runtime/Koyashiro.UdonJwt.Tests.asmdef
+++ b/Packages/net.koyashiro.udonjwt/Tests/Runtime/Koyashiro.UdonJwt.Tests.asmdef
@@ -1,9 +1,10 @@
 {
-    "name": "Koyashiro.UdonJwt.Runtime",
+    "name": "Koyashiro.UdonJwt.Tests",
     "references": [
         "UdonSharp.Runtime",
-        "Koyashiro.UdonJson.Runtime",
-        "Koyashiro.UdonEncoding.Runtime"
+        "Koyashiro.UdonTest",
+        "Koyashiro.UdonJson",
+        "Koyashiro.UdonJwt"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
