--- a/Packages/net.koyashiro.udonjwt/package.json
+++ b/Packages/net.koyashiro.udonjwt/package.json
@@ -22,7 +22,6 @@
   "vpmDependencies": {
     "com.vrchat.udonsharp": "1.1.6",
     "net.koyashiro.udonencoding": "0.3.0",
-    "net.koyashiro.udonjson": "0.8.0",
-    "net.koyashiro.udontest": "0.4.1"
+    "net.koyashiro.udonjson": "0.8.0"
   }
 }
