--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -27,13 +27,13 @@
       }
     },
     "com.vrchat.worlds": {
-      "version": "3.1.10",
+      "version": "3.1.11",
       "dependencies": {
-        "com.vrchat.base": "3.1.x"
+        "com.vrchat.base": "3.1.11"
       }
     },
     "com.vrchat.base": {
-      "version": "3.1.10",
+      "version": "3.1.11",
       "dependencies": {}
     },
     "com.vrchat.clientsim": {
