--- a/Packages/net.koyashiro.udonjwt/package.json
+++ b/Packages/net.koyashiro.udonjwt/package.json
@@ -23,5 +23,6 @@
     "com.vrchat.udonsharp": "1.1.7",
     "net.koyashiro.udonencoding": "0.4.3",
     "net.koyashiro.udonjson": "0.11.0"
-  }
+  },
+  "repo": "https://vpm.koyashiro.net/repos.json"
 }
