--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -14,6 +14,9 @@
     },
     "net.koyashiro.udonencoding": {
       "version": "0.4.4"
+    },
+    "net.koyashiro.udonsha2": {
+      "version": "0.1.1"
     }
   },
   "locked": {
@@ -65,6 +68,12 @@
     },
     "net.koyashiro.udonencoding": {
       "version": "0.4.4",
+      "dependencies": {
+        "com.vrchat.udonsharp": "^1.1.8"
+      }
+    },
+    "net.koyashiro.udonsha2": {
+      "version": "0.1.1",
       "dependencies": {
         "com.vrchat.udonsharp": "^1.1.8"
       }
