--- a/Packages/net.koyashiro.udonjwt/package.json
+++ b/Packages/net.koyashiro.udonjwt/package.json
@@ -22,7 +22,8 @@
   "vpmDependencies": {
     "com.vrchat.udonsharp": "^1.1.8",
     "net.koyashiro.udonencoding": "^0.4.x",
-    "net.koyashiro.udonjson": "^0.11.x"
+    "net.koyashiro.udonjson": "^0.11.x",
+    "net.koyashiro.udonsha2": "^0.1.x"
   },
   "repo": "https://vpm.koyashiro.net/repos.json"
 }
