refactor: use net.koyashiro.genericdatacontainer

--- a/Packages/net.koyashiro.udonjwt/Runtime/Koyashiro.UdonJwt.asmdef
+++ b/Packages/net.koyashiro.udonjwt/Runtime/Koyashiro.UdonJwt.asmdef
@@ -3,8 +3,7 @@
     "references": [
         "UdonSharp.Runtime",
         "Koyashiro.UdonEncoding",
-        "Koyashiro.UdonSHA2",
-        "Koyashiro.UdonJson"
+        "Koyashiro.UdonSHA2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
