--- a/Packages/vpm-manifest.json
+++ b/Packages/vpm-manifest.json
@@ -1,13 +1,10 @@
 {
   "dependencies": {
-    "com.vrchat.udonsharp": {
-      "version": "1.1.8"
-    },
-    "com.vrchat.clientsim": {
-      "version": "1.2.4"
-    },
     "com.vrchat.core.vpm-resolver": {
-      "version": "0.1.19"
+      "version": "0.1.29"
+    },
+    "com.vrchat.worlds": {
+      "version": "3.6.1"
     },
     "net.koyashiro.udontest": {
       "version": "0.5.2"
@@ -23,30 +20,18 @@
     }
   },
   "locked": {
-    "com.vrchat.udonsharp": {
-      "version": "1.1.8",
-      "dependencies": {
-        "com.vrchat.worlds": "^3.1.x"
-      }
-    },
     "com.vrchat.worlds": {
-      "version": "3.2.0",
+      "version": "3.6.1",
       "dependencies": {
-        "com.vrchat.base": "3.2.0"
+        "com.vrchat.base": "3.6.1"
       }
     },
     "com.vrchat.base": {
-      "version": "3.2.0",
+      "version": "3.6.1",
       "dependencies": {}
     },
-    "com.vrchat.clientsim": {
-      "version": "1.2.4",
-      "dependencies": {
-        "com.vrchat.worlds": "^3.1.x"
-      }
-    },
     "com.vrchat.core.vpm-resolver": {
-      "version": "0.1.19",
+      "version": "0.1.29",
       "dependencies": {}
     },
     "net.koyashiro.udontest": {
