--- a/Packages/net.koyashiro.udonjwt/package.json
+++ b/Packages/net.koyashiro.udonjwt/package.json
@@ -1,7 +1,7 @@
 {
   "name": "net.koyashiro.udonjwt",
   "displayName": "UdonJwt",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "JWT library for UdonSharp.",
   "homepage": "https://github.com/koyashiro/udon-jwt",
   "bugs": {
@@ -18,10 +18,10 @@
     "url": "https://github.com/koyashiro/udon-jwt"
   },
   "samples": [],
-  "url": "https://github.com/koyashiro/udon-jwt/releases/download/v0.2.1/net.koyashiro.udonjwt-0.2.1.zip",
+  "url": "https://github.com/koyashiro/udon-jwt/releases/download/v0.3.0/net.koyashiro.udonjwt-0.3.0.zip",
   "vpmDependencies": {
-    "com.vrchat.base": "^3.5.2",
-    "com.vrchat.worlds": "^3.5.2",
+    "com.vrchat.base": "^3.10.x",
+    "com.vrchat.worlds": "^3.10.x",
     "net.koyashiro.genericdatacontainer": "^0.2.x",
     "net.koyashiro.udonsha2": "^0.1.x"
   },
